--- a/presentations/defense/defense-presentation_nopause.tex
+++ b/presentations/defense/defense-presentation_nopause.tex
@@ -69,32 +69,31 @@
 \pause
 
 \exg. Ich {lade ein}, \textbf<3->{wem} \textbf<3->{auch} \textbf<3->{Maria} \textbf<3->{vertraut}.\\
- I invite\textcolor<6->{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor<9->{red}{\tsc{dat}} also Maria trust\textcolor<7->{red}{\scsub{[dat]}}\\
+ I invite\textcolor<7->{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor<9->{red}{\tsc{dat}} also Maria trust\textcolor<6->{red}{\scsub{[dat]}}\\
  `I invite whoever Maria also trusts.' \hfill{(Modern German, \pgcitealt{vogel2001}{344})}
 
 \only<4,8>{
 \exg. Ich lade die Person ein, \textbf<3->{der} \textbf<3->{Maria} \textbf<3->{vertraut}.\\
  I invite\textcolor<8>{LimeGreen}{\scsub{[acc]}}
  the.\textcolor<8>{LimeGreen}{\tsc{acc}} person {}
- \tsc{rp}.\textcolor<8>{red}{\tsc{dat}} Maria.{\tsc{nom}}
- trust\textcolor<8>{red}{\scsub{[dat]}}
- \\
+ \tsc{rp}.\textcolor<8>{red}{\tsc{dat}} Maria
+ trust\textcolor<8>{red}{\scsub{[dat]}}\\
  `I invite the person that Maria trusts.'
  }
 
  \vspace{1em}
 
-\onslide<10->{two aspects determine grammaticality}
+\onslide<10->{two factors determine grammaticality}
 
 \begin{enumerate}
-  \item \onslide<11->{which cases are competing}
+  \item \onslide<11->{the case of the relative pronoun}
   \begin{itemize}
-      \onslide<12->{\item \tsc{nom} < \tsc{acc} < \tsc{dat}}
+      \onslide<12->{\item \tsc{nom} < \tsc{acc} < \tsc{dat} \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}}
       \onslide<13->{\item is stable across languages}
   \end{itemize}
-  \item \onslide<14->{where the competitors come from}
+  \item \onslide<14->{where the winning case comes from}
   \begin{itemize}
-      \onslide<15->{\item internal (\tsc{int}) vs. external (\tsc{ext}) case}
+      \onslide<15->{\item internal (\tsc{int}) vs. external (\tsc{ext}) case \citep[cf.][]{grosu1994,himmelreich2017,cinqueforthcoming}}
       \onslide<16->{\item differs across languages}
   \end{itemize}
 \end{enumerate}
@@ -112,7 +111,7 @@
 
 
 
-\begin{frame}[t]{Which cases are competing (Vogel 2001)}
+\begin{frame}[t]{The case of the relative pronoun in Modern German (Vogel 2001)}
 
 \pause
 
@@ -121,13 +120,13 @@
 
 \onslide<4->{
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-I invite\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
+I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
 
 \only<5>{
 \exg. *Ich {lade ein}, wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-I invite.\tsc{pres}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
+I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
 
@@ -163,7 +162,7 @@ us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc
 
 
 
-\begin{frame}[t]{Which cases are competing in other languages}
+\begin{frame}[t]{The case of the relative pronoun in other languages}
 
 \pause
 
@@ -173,63 +172,62 @@ us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc
 \pause
 
 \exg. \tbf{hòn} \tbf{hoi} \tbf{theoì} \tbf{philoũsin} apothnḗͅskei néos\\
-\tsc{rp}.\tsc{sg}.\tsc{m}.\textcolor{LimeGreen}{\tsc{acc}} the god.\tsc{pl} love.3\tsc{pl}\textcolor{LimeGreen}{\scsub{[acc]}} die.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}} young\\
+\tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} the god love\textcolor{LimeGreen}{\scsub{[acc]}} die\textcolor{Turquoise}{\scsub{[nom]}} young\\
 `He, whom the gods love, dies young.' \flushfill{Classical Greek, Menander, The Double Deceiver 125}\label{ex:ag-nom-acc}
 
 \pause
 
 \exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
-\tsc{rp}.\tsc{sg}.\tsc{m}.\textcolor{red}{\tsc{dat}} less become.\tsc{pres}.3\tsc{sg} read.\tsc{inf}\textcolor{red}{\scsub{[dat]}} less love.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}}\\
+\tsc{rp}.\textcolor{red}{\tsc{dat}} less become read\textcolor{red}{\scsub{[dat]}} less love\textcolor{Turquoise}{\scsub{[nom]}}\\
 `whom less is read, loves less' \flushfill{Old High German, Tatian 138:13}\label{ex:ohg-nom-dat}
 
 \pause
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\textcolor{red}{\scsub{[dat]}} \tsc{rel}.\tsc{sg}.\tsc{m}.\textcolor{red}{\tsc{dat}} -\tsc{comp} {send}.\tsc{pret}.3\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}\\
+that believe\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} -\tsc{comp} {send}\textcolor{LimeGreen}{\scsub{[acc]}} he\\
 `that you believe in him whom he sent' \flushfill{Gothic, John 6:29}\label{ex:gothic-dat-acc}
 
 \end{frame}
 
 
 
-\begin{frame}[t]{Whether the winner gets approved in German (Vogel 2001)}
+\begin{frame}[t]{Where the winning case comes from in Modern German (Vogel 2001)}
 
 \pause
-approve \textbf<4>{\tsc{int}} or \tsc{ext} as a winner
+
+\begin{itemize}
+  \item \textbf<4>{winning case =
+  \tsc{int} case}
+  \item \textbf<6>{winning case =
+  \tsc{ext} case}
+\end{itemize}
+
 
 \onslide<3->{
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}.\\
-1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor{red}{\tsc{dat}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
+I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} alsoMaria trust\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
 
-\vspace{1em}
-
-\onslide<6->{
+\onslide<5->{
 \exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-1\tsc{sg}.{\tsc{nom}} trust.\tsc{pres}.1\tsc{sg}\textcolor{red}{\scsub{[dat]}} \tsc{rel}.\tsc{an}.\textcolor{red}{\tsc{dat}} also Maria.{\tsc{nom}} like.\tsc{pres}.3\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}}\\
+I trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} alsoMaria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
 `I trust whoever Maria also likes.'
 }
 
 \onslide<7->{
-\exg. *Ich vertraue, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-1\tsc{sg}.{\tsc{nom}} trust.\tsc{pres}.1\tsc{sg}\textcolor{red}{\scsub{[dat]}} \tsc{rel}.\tsc{an}.\textcolor{LimeGreen}{\tsc{acc}} also Maria.{\tsc{nom}} like.\tsc{pres}.3\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}}\\
-`I trust whoever Maria also likes.'
-}
-
-\onslide<5->{
-the internal case (\tsc{int}) gets approved when it wins the case competition}\onslide<8->{,
-the external case (\tsc{ext}) does not
+\tsc{int} case is allowed to win the case competition,
+\tsc{ext} case is not
 }
 
 \end{frame}
 
 
-\begin{frame}[t]{Whether the winner gets approved in German}
+\begin{frame}[t]{Where the winning case comes from in Modern German}
 
 \pause
-the internal case (\tsc{int}) gets approved when it wins the case competition,
-the external case (\tsc{ext}) does not
+the \tsc{int} case is allowed to win the case competition,
+the \tsc{ext} case is not
 
 \pause
   \begin{table}[H]
@@ -265,18 +263,22 @@ the external case (\tsc{ext}) does not
 
 
 
-\begin{frame}[t]{Whether the winner gets approved in Old High German}
+\begin{frame}[t]{Where the winning case comes from in Old High German}
+
+\pause
+
+both the \tsc{int} case and the \tsc{ext} case are allowed to win the case competition
 
 \pause
 
   \exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
-  \tsc{rp}.\tsc{sg}.\tsc{m}.\textcolor{red}{\tsc{dat}} less become.\tsc{pres}.3\tsc{sg} read.\tsc{inf}\textcolor{red}{\scsub{[dat]}} less love.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}}\\
+  \tsc{rp}.\textcolor{red}{\tsc{dat}} less become read\textcolor{red}{\scsub{[dat]}} less love\textcolor{Turquoise}{\scsub{[nom]}}\\
   `whom less is read, loves less' \flushfill{Old High German, Tatian 138:13}\label{ex:ohg-nom-dat}
 
 \pause
 
   \exg. enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}\\
-  and 3\tsc{sg}.\tsc{m}.\tsc{nom} reply.\tsc{pst}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\tsc{sg}.\tsc{m}.\textcolor{red}{\tsc{dat}} {to 3\tsc{sg}.\tsc{m}.\tsc{dat}} speak.\tsc{pst}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}}\\
+  and  reply\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} {to him} speak\textcolor{Turquoise}{\scsub{[nom]}}\\
   `and he replied to the one who spoke to him' \flushfill{Old High German, \tsc{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
 \pause
@@ -313,18 +315,22 @@ the external case (\tsc{ext}) does not
 \end{frame}
 
 
-\begin{frame}[t]{Whether the winner gets approved in Polish}
+\begin{frame}[t]{Where the winning case comes from in Polish}
+
+\pause
+
+neither the \tsc{int} case nor the \tsc{ext} case is allowed to win the case competition
 
 \pause
 
   \exg. *Jan lubi \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
-  Jan like.\tsc{3sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\textcolor{red}{\tsc{dat}}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\textcolor{red}{\scsub{[dat]}}\\
+  Jan like\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} ever tease\textcolor{red}{\scsub{[dat]}}\\
   `Jan likes whoever he teases.'
 
 \pause
 
   \exg. *Jan ufa komu \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-  Jan trust.\tsc{3sg}\textcolor{red}{\scsub{[dat]}} \tsc{rel}.\textcolor{red}{\tsc{dat}}.\tsc{an}.\tsc{sg} ever let.\tsc{3sg}\textcolor{LimeGreen}{\scsub{[acc]}} to home\\
+  Jan trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} ever let\textcolor{LimeGreen}{\scsub{[acc]}} to home\\
   `Jan trusts whoever he let into the house.'
 
 \pause
@@ -361,13 +367,14 @@ the external case (\tsc{ext}) does not
 \end{frame}
 
 
-\begin{frame}[t]{Whether the winner gets approved in overview}
+\begin{frame}[t]{Where the winning case comes from in overview}
 
 \begin{multicols}{2}
 
 \onslide<2->{
   \begin{table}[H]
     \center
+    \caption{Modern German pattern}
     \begin{tabular}{c|c|c|c}
       \toprule
       \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -396,9 +403,12 @@ the external case (\tsc{ext}) does not
   \end{table}
 }
 
+\vspace{1em}
+
 \onslide<4-6>{
   \begin{table}[H]
     \center
+    \caption{Polish pattern}
     \begin{tabular}{c|c|c|c}
       \toprule
       \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -427,9 +437,12 @@ the external case (\tsc{ext}) does not
   \end{table}
 }
 
+\vspace{1em}
+
 \onslide<3->{
   \begin{table}[H]
     \center
+    \caption{Old High German pattern}
     \begin{tabular}{c|c|c|c}
       \toprule
       \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -458,9 +471,12 @@ the external case (\tsc{ext}) does not
   \end{table}
 }
 
+\vspace{1em}
+
 \only<5>{
   \begin{table}[H]
     \center
+    \caption{unattested pattern}
     \begin{tabular}{c|c|c|c}
       \toprule
       \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -495,68 +511,31 @@ the external case (\tsc{ext}) does not
 
 
 
-\begin{frame}[t]{Whether the winner gets approved in flowchart}
+\begin{frame}[t]{Two factors determine grammaticality}
 
 \pause
 
-  \begin{figure}[H]
-    \centering
-    \begin{tabular}[b]{c}
-      \toprule
-      \begin{tikzpicture}[node distance=1.5cm]
-        \node (question2) [question]
-        {\tsc{int} approved};
-            \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-            {matching};
-                \node (example2) [example, below of=outcome2]
-                {e.g. Polish\\\phantom{x}\\\phantom{x}};
-            \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-            {\tsc{ext} approved};
-                \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-                {internal-only};
-                    \node (example3) [example, below of=outcome3]
-                    {e.g. Modern German\\\phantom{x}};
-                \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-                {unrestricted};
-                    \node (example4) [example, below of=outcome4]
-                    {e.g. Gothic, Old High German, Classical Greek};
+  \begin{enumerate}
+    \item {the case of the relative pronoun}
+    \begin{itemize}
+        {\item \tsc{nom} < \tsc{acc} < \tsc{dat} \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}}
+        {\item is stable across languages}
+    \end{itemize}
+    \item {where the winning case comes from}
+    \begin{itemize}
+        {\item internal (\tsc{int}) vs. external (\tsc{ext}) case \citep[cf.][]{grosu1994,himmelreich2017,cinqueforthcoming}}
+        {\item differs across languages}
+    \end{itemize}
+  \end{enumerate}
 
-      \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-      \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-      \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-      \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-      \end{tikzpicture}\\
-      \bottomrule
-    \end{tabular}
-      \label{fig:two-parameters}
-  \end{figure}
+  \vspace{1em}
 
-\end{frame}
-
-
-
-
-\begin{frame}[t]{Two generalizations}
-
-\begin{enumerate}
-  \item the winner of the competition
+  {
   \begin{itemize}
-      \item is stable across languages
-      \item \tsc{nom} < \tsc{acc} < \tsc{dat}
+    \item {illustrate the generalizations}
+    \item \textbf<3>{derive the generalizations}
   \end{itemize}
-  \item whether the winner gets approved
-  \begin{itemize}
-      \item differs across languages
-      \item \tsc{int}/\tsc{ext} approved
-  \end{itemize}
-\end{enumerate}
-
-\vspace{1em}
-
-\begin{itemize}
-  \item illustrate the generalizations
-  \item \textbf<2>{derive the generalizations}
-\end{itemize}
+  }
 
 \end{frame}
 
@@ -571,9 +550,10 @@ the external case (\tsc{ext}) does not
 
 \begin{table}[H]
   \center
+  \caption{Khanty pronouns}
   \begin{tabular}{cl}
   \toprule
-             & 3\tsc{sg} \\
+             &  \\
              \cmidrule{2-2}
   \tsc{nom}
              & \onslide<2->{luw}                                    \\
@@ -585,9 +565,19 @@ the external case (\tsc{ext}) does not
 
 \vspace{1em}
 
+\begin{itemize}
+  \item \onslide<5->{syncretism patterns \citep{baerman2005,caha2009,zompi2017}}
+  \item \onslide<6->{agreement \citep{moravcsik1978,bobaljik2006}}
+  \item \onslide<7->{relativization \citep{keenan1977,caha2009}}
+\end{itemize}
+
 \center
 
 \onslide<8->{
+a single trigger
+}
+
+\onslide<9->{
 \begin{forest} boom
   [\tsc{dat}P
       [\tsc{k}3]
@@ -600,54 +590,12 @@ the external case (\tsc{ext}) does not
       ]
   ]
 \end{forest}
+
+\citep{caha2009,caha2019}
 }
 
 \vspace{1em}
 
-\begin{itemize}
-  \item \onslide<5->{syncretism patterns (ref)}
-  \item \onslide<6->{agreement (ref)}
-  \item \onslide<7->{relativization (ref)}
-\end{itemize}
-
-\vspace{2em}
-
-\onslide<9->{
-\begin{forest} boom
-[\tsc{dat}P
-    [\tsc{acc}P
-        [\tsc{nom}P,
-        tikz={
-        \node[label={below:\tit{luw}},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [3\tsc{sg}P]
-            [\tsc{k}1]
-        ]
-        [\tsc{acc}P,
-        tikz={
-        \node[label={below:\tit{e:l}},
-        draw,circle,
-        scale=0.775,
-        fit to=tree]{};
-        }
-            [\tsc{k}2]
-        ]
-    ]
-    [\tsc{dat}P,
-    tikz={
-    \node[label={below:\tit{na}},
-    draw,circle,
-    scale=0.775,
-    fit to=tree]{};
-    }
-        [\tsc{k}3]
-    ]
-]
-\end{forest}
-}
 
 \end{multicols}
 
@@ -657,6 +605,8 @@ the external case (\tsc{ext}) does not
 \begin{frame}[t]{The winning case contains the losing case}
 
 \center
+
+\pause
 
   \begin{forest} boom
     [\tsc{dat}P,
@@ -703,65 +653,132 @@ the external case (\tsc{ext}) does not
     ]
   \end{forest}\label{ex:dat-contains-acc}
 
-\onslide<5>{
-Properties of morphology show reflexes in syntax
-}
+\pause
+
+\tsc{nom} < \tsc{acc} < \tsc{dat} can be reduced to containment
 
 \end{frame}
 
 
 
-\begin{frame}[t]{\tsc{int}/\tsc{ext} approved}
+\begin{frame}[t]{\tsc{int}/\tsc{ext} case}
 
 \pause
 
-  \begin{figure}[H]
-    \begin{adjustbox}{max height=0.7\textheight}
-    \centering
-    \begin{tabular}[b]{c}
+\begin{multicols}{2}
+
+  \begin{table}[H]
+    \center
+    \caption{Modern German pattern}
+    \begin{tabular}{c|c|c|c}
       \toprule
-      \begin{tikzpicture}[node distance=1.5cm]
-        \node (question2) [question]
-        {\tsc{int} approved};
-            \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-            {matching};
-                \node (example2) [example, below of=outcome2]
-                {e.g. Polish\\\phantom{x}\\\phantom{x}};
-            \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-            {\tsc{ext} approved};
-                \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-                {internal-only};
-                    \node (example3) [example, below of=outcome3]
-                    {e.g. Modern German\\\phantom{x}};
-                \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-                {unrestricted};
-                    \node (example4) [example, below of=outcome4]
-                    {e.g. Gothic, Old High German, Classical Greek};
-
-      \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-      \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-      \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-      \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-
-      \onslide<4->{
-      \node[yshift=-0.5cm,
-      draw,circle,color=red,
-      scale=1,line width=1.5pt,
-      fit=(question2)]{};
-      }
-      \end{tikzpicture}\\
-      \bottomrule
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+             & [\tsc{nom}]
+             & [\tsc{acc}]
+             & [\tsc{dat}]
+             \\ \cmidrule{1-4}
+         [\tsc{nom}]
+             & \tsc{nom}
+             & \cellcolor{LG}*
+             & \cellcolor{LG}*
+             \\ \cmidrule{1-4}
+         [\tsc{acc}]
+             & \cellcolor{DG}\tsc{acc}
+             & \tsc{acc}
+             & \cellcolor{LG}*
+             \\ \cmidrule{1-4}
+         [\tsc{dat}]
+             & \cellcolor{DG}\tsc{dat}
+             & \cellcolor{DG}\tsc{dat}
+             & \tsc{dat}
+             \\
+       \bottomrule
     \end{tabular}
-      \label{fig:two-parameters}
-  \end{adjustbox}
-  \end{figure}
+      \label{tbl:case-competition-only-int}
+  \end{table}
 
+\vspace{1em}
+
+  \begin{table}[H]
+    \center
+    \caption{Polish pattern}
+    \begin{tabular}{c|c|c|c}
+      \toprule
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+             & [\tsc{nom}]
+             & [\tsc{acc}]
+             & [\tsc{dat}]
+             \\ \cmidrule{1-4}
+         [\tsc{nom}]
+             & \tsc{nom}
+             & \cellcolor{LG}*
+             & \cellcolor{LG}*
+             \\ \cmidrule{1-4}
+         [\tsc{acc}]
+             & \cellcolor{DG}*
+             & \tsc{acc}
+             & \cellcolor{LG}*
+             \\ \cmidrule{1-4}
+         [\tsc{dat}]
+             & \cellcolor{DG}*
+             & \cellcolor{DG}*
+             & \tsc{dat}
+             \\
+       \bottomrule
+    \end{tabular}
+      \label{tbl:case-competition-none}
+  \end{table}
+
+\vspace{1em}
+
+\only<2>{
+  \begin{table}[H]
+    \center
+    \caption{Old High German pattern}
+    \begin{tabular}{c|c|c|c}
+      \toprule
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+             & [\tsc{nom}]
+             & [\tsc{acc}]
+             & [\tsc{dat}]
+             \\ \cmidrule{1-4}
+         [\tsc{nom}]
+             & \tsc{nom}
+             & \cellcolor{LG}\tsc{acc}
+             & \cellcolor{LG}\tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{acc}]
+             & \cellcolor{DG}\tsc{acc}
+             & \tsc{acc}
+             & \cellcolor{LG}\tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{dat}]
+             & \cellcolor{DG}\tsc{dat}
+             & \cellcolor{DG}\tsc{dat}
+             & \tsc{dat}
+             \\
+       \bottomrule
+    \end{tabular}
+      \label{tbl:case-competition-int-ext}
+  \end{table}
+}
+
+\end{multicols}
+
+\center
 
 \pause
-\center
+\pause
+parameter =
+
+\tsc{int} may win case competition
+
+OR
+
+\tsc{int} may win case competition
+
+\pause
   Borer-Chomsky Conjecture: the lexicon is the source of language variation
-
-
 
 \end{frame}
 
@@ -811,7 +828,7 @@ Properties of morphology show reflexes in syntax
 \end{frame}
 
 
-\begin{frame}[t]{The pattern in German}
+\begin{frame}[t]{The pattern in Modern German}
 
 \pause
 
@@ -847,7 +864,7 @@ Properties of morphology show reflexes in syntax
 \end{frame}
 
 
-\begin{frame}[t]{Light head and relative pronoun in German}
+\begin{frame}[t]{Light head and relative pronoun in Modern German}
 
 \pause
 
@@ -905,12 +922,12 @@ Properties of morphology show reflexes in syntax
 \end{frame}
 
 
-\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{acc} → \tit{wen} in German}
+\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{acc} → \tit{wen} in Modern German}
 
 \pause
 
 \exg. Ich lade \sout{n} ein, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
- 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{lh}.\tsc{an}.\tsc{acc} {} \tsc{rp}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
+ I invite\scsub{[acc]} \tsc{lh}.\tsc{acc} {} \tsc{rp}.\tsc{acc} also Maria like\scsub{[acc]}\\
  `I invite who Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc-rep}
 
 \pause
@@ -996,7 +1013,7 @@ Properties of morphology show reflexes in syntax
 % \pause
 %
 % \exg. *Ich vertraue \sout{m}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
-% 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{lh}.\tsc{an}.\tsc{dat} \tsc{rp}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
+% I trust\scsub{[dat]} \tsc{lh}.\tsc{dat} \tsc{rp}.\tsc{acc} also Maria like\scsub{[acc]}\\
 % `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-rep-lh}
 %
 % \pause
@@ -1082,12 +1099,12 @@ Properties of morphology show reflexes in syntax
 
 
 
-\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} → \tit{wem} in German}
+\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} → \tit{wem} in Modern German}
 
 \pause
 
 \exg. Ich lade \sout{n} ein, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}.\\
-1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{lh}.\tsc{an}.\tsc{dat} {} \tsc{rp}.\tsc{an}.\tsc{dat} also Maria.\tsc{nom} trust.\tsc{pres}.3\tsc{sg}\scsub{[dat]}\\
+I invite\scsub{[acc]} \tsc{lh}.\tsc{dat} {} \tsc{rp}.\tsc{dat} also Maria trust\scsub{[dat]}\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep}
 
 \pause
@@ -1197,7 +1214,7 @@ fit to=tree]{};
     [\tsc{k}2]
     [\tsc{nom}P
         [\tsc{k}1]
-        [3\tsc{sg}P
+        [P
             [\phantom{xxx}, roof]
         ]
     ]
@@ -1217,7 +1234,7 @@ fit to=tree]{};
     fit to=tree]{};
     }
         [\tsc{k}1]
-        [3\tsc{sg}P
+        [P
             [\phantom{xxx}, roof]
         ]
     ]
@@ -1410,7 +1427,7 @@ fit to=tree]{};
 \pause
 
 \exg. Jan lubi \sout{ogo} \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+Jan like\scsub{[acc]} \tsc{lh}.\tsc{acc}  \tsc{rp}.\tsc{acc} ever Maria like\scsub{[acc]}\\
 `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc-rep}
 
 \pause
@@ -1520,7 +1537,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\
 % \pause
 %
 % \exg. *Jan ufa \sout{omu} \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-% Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+% Jan trust\scsub{[dat]} \tsc{elh}.\tsc{dat} \tsc{rp}.\tsc{acc} ever let\scsub{[acc]} to home\\
 % `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-rel}
 %
 % \pause
@@ -1643,7 +1660,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\
 \pause
 
 \exg. *Jan lubi \sout{ogo} \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like\scsub{[acc]} \tsc{lh}.\tsc{acc} \tsc{rp}.\tsc{dat} ever tease\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-rel}
 
 \pause
@@ -1758,7 +1775,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\
 \end{frame}
 
 
-\begin{frame}{The difference between German and Polish}
+\begin{frame}{The difference between Modern German and Polish}
 
 \pause
 
@@ -1953,83 +1970,51 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\
 
 
 
-\begin{frame}[t]{}
+\begin{frame}[t]{\tsc{int}/\tit{ext}}
 
-\pause
+  \pause
+  parameter =
 
-  \begin{figure}[H]
-    \centering
-    \begin{tabular}[b]{c}
-      \toprule
-      \begin{tikzpicture}[node distance=1.5cm]
-        \onslide<1-2>{
-        \node (question2) [question]
-        {\tsc{int} approved};
-        }
-        \onslide<3->{
-        \node (question2) [question]
-        {ϕ+\tsc{k} portmanteau};
-        }
-            \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-            {matching};
-                \node (example2) [example, below of=outcome2]
-                {e.g. Polish\\\phantom{x}\\\phantom{x}};
-            \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-            {\tsc{ext} approved};
-                \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-                {internal-only};
-                    \node (example3) [example, below of=outcome3]
-                    {e.g. Modern German\\\phantom{x}};
-                \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-                {unrestricted};
-                    \node (example4) [example, below of=outcome4]
-                    {e.g. Gothic, Old High German, Classical Greek};
+  \tsc{int} may win case competition
+  
+  OR
 
-      \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-      \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-      \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-      \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-      \end{tikzpicture}\\
-      \bottomrule
-    \end{tabular}
-      \label{fig:lexical-entries}
-  \end{figure}
+  \tsc{int} may win case competition
+
+  \pause
+
+
+
+
+\tsc{int}/\tsc{ext} can be reduced to containment:
 
 \end{frame}
 
-
-\begin{frame}[t]{Again}
-
-
-
-\end{frame}
 
 \begin{frame}[t]{Conclusion}
 
-  \begin{enumerate}
-    \item the winner of the competition
-    \begin{itemize}
-        \item is stable across languages
-        \item \tsc{nom} < \tsc{acc} < \tsc{dat}
-    \end{itemize}
-    \item whether the winner gets approved
-    \begin{itemize}
-        \item differs across languages
-        \item \tsc{int}/\tsc{ext} approved
-    \end{itemize}
-  \end{enumerate}
+\pause
+
+\end{frame}
+
+\begin{enumerate}
+  \item {the case of the relative pronoun}
+  \begin{itemize}
+      {\item \tsc{nom} < \tsc{acc} < \tsc{dat} \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}}
+      {\item is stable across languages}
+  \end{itemize}
+  \item {where the winning case comes from}
+  \begin{itemize}
+      {\item internal (\tsc{int}) vs. external (\tsc{ext}) case \citep[cf.][]{grosu1994,himmelreich2017,cinqueforthcoming}}
+      {\item differs across languages}
+  \end{itemize}
+\end{enumerate}
 
   \pause
 
 \vspace{1em}
 
-It's all about containment
 
-  \pause
-
-  \vspace{1em}
-
-Properties of morphology show reflexes in syntax
 
 \end{frame}
 
@@ -2040,7 +2025,7 @@ Citko, Barbara (2013). “Size matters: Multidominance and DP structure in Polis
 Daskalaki, Evangelia (2011). “Case Mis-Matching as Kase Stranding”. In: \tit{University of Pennsylvania Working Papers in Linguistics.} Ed. by Lauren A. Friedman. Vol. 17. Philadelphia: Penn Linguistics Club, pp. 77–86.\\
 Harbert, Wayne Eugene (1978). “Gothic syntax: a relational grammar”. PhD thesis. Urbana-Champaign.\\
 Himmelreich, Anke (2017). “Case Matching Effects in Free Relatives and Parasitic Gaps: A Study on the Properties of Agree”. PhD thesis. Universität Leipzig.\\
-Vogel, Ralf (2001). “Case Conflict in German Free Relative Constructions: An Optimality Theoretic Treatment”. In: \tit{Competition in Syntax.} Ed. by Gereon Müller and Wolfgang Sternefeld. Berlin: Mouton de Gruyter, pp. 341–375. doi: 10.1515/9783110829068.341.
+Vogel, Ralf (2001). “Case Conflict in Modern German Free Relative Constructions: An Optimality Theoretic Treatment”. In: \tit{Competition in Syntax.} Ed. by Gereon Müller and Wolfgang Sternefeld. Berlin: Mouton de Gruyter, pp. 341–375. doi: 10.1515/9783110829068.341.
 
 \end{frame}
 
